nowrap bug 2

--- a/websit-reveal-animation-using-tweenmax.css
+++ b/websit-reveal-animation-using-tweenmax.css
@@ -93,7 +93,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-wrap;
+  flex-wrap: nowrap;
 }
 
 .title .letter {
